# OpenOats

./: .gitignore  README.md  app.py  desktop_app.py  pyproject.toml  requirements.txt
.github/workflows/: release-dmg.yml  ui-smoke.yml
Casks/: openoats.rb
OpenGranola/: Package.swift
OpenGranola/Sources/OpenGranola/: Info.plist
OpenGranola/Sources/OpenGranola/App/: OpenGranolaApp.swift
OpenGranola/Sources/OpenGranola/Audio/: MicCapture.swift  SystemAudioCapture.swift
OpenGranola/Sources/OpenGranola/Intelligence/: KnowledgeBase.swift  OpenRouterClient.swift  SuggestionEngine.swift
OpenGranola/Sources/OpenGranola/Models/: Models.swift
OpenGranola/Sources/OpenGranola/Settings/: AppSettings.swift
OpenGranola/Sources/OpenGranola/Storage/: SessionStore.swift  TranscriptLogger.swift
OpenGranola/Sources/OpenGranola/Transcription/: StreamingTranscriber.swift  TranscriptionEngine.swift
OpenGranola/Sources/OpenGranola/Views/: ContentView.swift  OverlayContent.swift  SettingsView.swift
OpenOats/Sources/OpenOats/: Info.plist
OpenOats/Sources/OpenOats/Audio/: MicCapture.swift
OpenOats/Sources/OpenOats/Intelligence/: MarkdownMeetingWriter.swift  SuggestionEngine.swift
OpenOats/Sources/OpenOats/Models/: TranscriptStore.swift
OpenOats/Tests/OpenOatsTests/: MarkdownMeetingWriterTests.swift
docs/superpowers/specs/: 2026-04-05-camera-meeting-detection-design.md
ots/: kb.py  logic.py  mac_overlay.py  main.py  mic.py  models.py  settings.py  storage.py  stt.py  ui_theme.py
scripts/: build_macos_app.sh  build_swift_app.sh  make_dmg.sh
(+9 files in other folders)
