[project]
name = "on-the-spot"
version = "0.1.0"
description = "Realtime meeting copilot"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.1.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "soundfile>=0.12.1",
  "sounddevice>=0.4.7",
]

[project.scripts]
on-the-spot = "ots.main:main"
